--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/lib/angular-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/model.js"></script>
     <script src="app/snapshot/crates.js"></script>
 
 </body>
