--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="snapshot">
 <head>
-    <base href="/SCTConfigDB"/>
+    <base href="/SCTConfigDB/"/>
     <meta charset="utf8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>SCT Conditions Snapshot</title>
