--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navbar navbar-static-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a href="#" class="navbar-brand">SCT Conditions DB Snapshot</a>
+                <a href="#" class="navbar-brand">SCT Configuration DB Snapshot</a>
             </div>
         </div>
     </div>
@@ -21,12 +21,12 @@
 
     </div>
 
-    <div> SCT Conditions App</div>
+    <div> SCT Snapshot App</div>
 
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/lib/angular-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="app/app.js"></script>
-    <script src="app/model.js"></script>
+    <script src="app/snapshot/model.js"></script>
     <script src="app/snapshot/crates.js"></script>
 
 </body>
