--- a/app/snapshot/snapshot.html
+++ b/app/snapshot/snapshot.html
@@ -1,6 +1,21 @@
 <div class="container">
     <div ng-controller="CratesCtrl">
     {{crateModel.iov}}
+        <div class="container">
+            <table class="table table-hover table-condensed">
+                <thead>
+                <tr>
+                    <th ng-repeat="header in crateModel.data.headers">{{header}}</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="row in dataStore1.data.rows" ng-click="click(row.values[0],this,dataStore1)" ng-show="dataStore1.isShown(row.values[0])" class="{{selected}}">
+                    <td ng-repeat="value in row.values">{{value}}</td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
 
         <div class="container">
             <div class="container text-primary" ng-show="crateModel.data">
