--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/lib/angular-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/dataStore.js"></script>
     <script src="app/snapshot/model.js"></script>
     <script src="app/snapshot/crates.js"></script>
+    <script src="app/diff/diff.js">    </script>
 
 </body>
 </html>
