Got the initial version of the diff tool working It will show things compared side-by-side Doesn't highlight differences yet. Shouldn't be hard to set that up though.

--- a/app/diff/diff.html
+++ b/app/diff/diff.html
@@ -11,7 +11,9 @@
             </tr>
             </thead>
             <tbody>
+
             <tr ng-repeat="row in diffModel.rows">
+                <th>{{row.name}}</th>
                 <td ng-repeat="value in row.values">{{value}}</td>
             </tr>
             </tbody>
