--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="js/lib/angular-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/dataStore.js"></script>
+    <script src="app/cratesAPI.js"></script>
     <script src="app/snapshot/model.js"></script>
     <script src="app/snapshot/crates.js"></script>
     <script src="app/diff/diff.js">    </script>
