replacement for $http with CratesAPI service completed.

--- a/app/snapshot/snapshot.html
+++ b/app/snapshot/snapshot.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div ng-controller="CratesCtrl">
+<div>
     {{crateModel.iov}}
         <div class="container">
             <div class="col-sm-2">
