--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <script src="app/app.js"></script>
     <script src="app/dataStore.js"></script>
     <script src="app/cratesAPI.js"></script>
-    <script src="app/snapshot/model.js"></script>
     <script src="app/snapshot/crates.js"></script>
+    <script src="app/snapshot/model.js"></script>
     <script src="app/diff/diff.js">    </script>
+    <script src="app/datastore/dataStoreController.js"></script>
 
 </body>
 </html>
