--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="app/app.js"></script>
     <script src="app/dataStore.js"></script>
     <script src="app/cratesAPI.js"></script>
+    <script src="app/cratesData.js"></script>
     <script src="app/snapshot/crates.js"></script>
     <script src="app/snapshot/model.js"></script>
     <script src="app/diff/diff.js">    </script>
