partial implementation of dropdown box navigation in snapshot.html not quite finished.

--- a/app/snapshot/snapshot.html
+++ b/app/snapshot/snapshot.html
@@ -1,49 +1,99 @@
 <div class="container">
-<div>
-    {{descriptor.str}}
+
     <div class="container" ng-show="!loaded">
         <h1 class="text-danger"> Loading! </h1>
     </div>
-        <div class="container">
-            <div class="panel panel-default">
-                <div class="panel-body">
-            <div class="col-sm-2">
-            <button type="button" class="btn b
+    <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="col-sm-2">
+                    <button type="button" class="btn b
             tn-default left" ng-click="storeSnapshot(0)"> Store {{dataStores.length}}</button>
-            </div>
-            <div class="col-sm-8">
-                 <button type="button" class="btn btn-default btn-warning btn-group text-center" ng-repeat="obj in dataStores">{{obj.label}}</button>
-            </div>
-            <div class="col-sm-2">
-                <button type="button" class="btn btn-default right" ng-show="dataStores.length>0" ng-click="viewStore()">View</button>
-                <button type="button" class="btn btn-default btn-default right" ng-show="dataStores.length>1" ng-click="diff()" >Compare</button>
-            </div>
                 </div>
+                <div class="col-sm-8">
+                    <button type="button" class="btn btn-default btn-warning btn-group text-center" ng-repeat="obj in dataStores">{{obj.label}}</button>
                 </div>
+                <div class="col-sm-2">
+                    <button type="button" class="btn btn-default right" ng-show="dataStores.length>0" ng-click="viewStore()">View</button>
+                    <button type="button" class="btn btn-default btn-default right" ng-show="dataStores.length>1" ng-click="diff()" >Compare</button>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <div class="container">
-            <div class="panel panel-default row" ng-repeat="md in modelList" ng-show="md.data">
-                <div class="panel-body table-scrollable">
+    <div class="panel panel-default">
+        <div class="panel-body">
+
+            <div class="btn-group" dropdown>
+                <button type="button" class="btn btn-default dropdown-toggle" ng-show="model.crateModel.data">
+                    Crate: {{crateSelection}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu list-group" role="menu" ng-show="crateIndices.length>0">
+                    <li class="list-group-item"  ng-repeat="element in crateIndices" ng-click="dropdownClick(model.crateModel,element)">{{element}}</li>
+                </ul>
+            </div>
+
+            <div class="btn-group" dropdown>
+                <button type="button" class="btn btn-default dropdown-toggle" ng-show="model.rodModel.data">
+                    ROD: {{rodSelection}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu list-group" role="menu" ng-show="rodIndices.length>0">
+                    <li class="list-group-item"  ng-repeat="element in rodIndices" ng-click="dropdownClick(model.rodModel,element)">{{element}}</li>
+                </ul>
+            </div>
+
+            <div class="btn-group" dropdown>
+                <button type="button" class="btn btn-default dropdown-toggle" ng-show="model.murModel.data">
+                    MUR: {{murSelection}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu list-group" role="menu" ng-show="murIndices.length>0">
+                    <li class="list-group-item"  ng-repeat="element in murIndices" ng-click="dropdownClick(model.murModel,element)">{{element}}</li>
+                </ul>
+            </div>
+FIXME --- finish implementation of dropdownClick...
+
+            <div class="btn-group" dropdown>
+                <button type="button" class="btn btn-default dropdown-toggle" ng-show="model.modModel.data">
+                    Module: {{modSelection}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu list-group" role="menu" ng-show="modIndices.length>0">
+                    <li class="list-group-item "  ng-repeat="element in modIndices" ng-click="dropdownClick(model.modModel,element)">{{element}}</li>
+                </ul>
+            </div>
+
+            <div class="btn-group" dropdown>
+                <button type="button" class="btn btn-default dropdown-toggle" ng-show="model.chipModel.data">
+                    Chip: {{chipSelection}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu list-group" role="menu" ng-show="chipIndices.length>0">
+                    <li class="list-group-item"  ng-repeat="element in chipIndices" ng-click="dropdownClick(model.chipModel,element)">{{element}}</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="panel panel-default row" ng-repeat="md in modelList" ng-show="md.data">
+            <div class="panel-body table-scrollable">
 
                 <table  class="table table-responsive">
 
                     <thead>
-                <tr>
-                    <th  ng-repeat="header in md.data.headers" class="col-lg-2">{{header}}</th>
-                </tr>
-                </thead>
-                <tr ng-repeat="row in md.data.rows" ng-show="md.showRow(row.values)">
-                    <td  ng-repeat="value in row.values" ng-click="click($index,row.values,md)" class="col-lg-2">{{value}}</td>
-                </tr>
+                    <tr>
+                        <th  ng-repeat="header in md.data.headers" class="col-lg-2">{{header}}</th>
+                    </tr>
+                    </thead>
+                    <tr ng-repeat="row in md.data.rows" ng-show="md.showRow(row.values)">
+                        <td  ng-repeat="value in row.values" ng-click="click($index,row.values,md)" class="col-lg-2">{{value}}</td>
+                    </tr>
 
-                </tbody>
+                    </tbody>
 
-            </table>
-                </div>
+                </table>
             </div>
-
         </div>
 
     </div>
+
+
 </div>
