starting to look at ngstorage as an option for using local storage

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <script src="js/lib/angular/angular.js"></script>
     <script src="js/lib/angular-bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
+    <script src="js/lib/ngstorage/ngStorage.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/dataStore.js"></script>
     <script src="app/cratesHTTP.js"></script>
