--- a/app/datastore/datastore.html
+++ b/app/datastore/datastore.html
@@ -9,7 +9,7 @@
     <tr ng-repeat="data in dataList">
         <td> {{data.label}}</td>
         <td> {{data.iov}}</td>
-        <td> {{data.descriptor.str}}</td>
+        <td> {{data.descriptor}}</td>
     </tr>
 </tbody>
     </table>
